Added visual differences between reward categories. Now each category has its own textColor. Correct behaviour when selecting hint rewards in accessoryTextField, now category changes appropriate to selected cell. Fixed bug of adding reward in list when it has already the same.

--- a/CustomInputView.xib
+++ b/CustomInputView.xib
@@ -31,7 +31,7 @@
                         <segment title="Expensive"/>
                     </segments>
                 </segmentedControl>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="25" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="31P-DR-5mp">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="25" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="31P-DR-5mp">
                     <rect key="frame" x="15" y="82" width="384" height="735"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
