light changes in design

--- a/RewardWheel/Base.lproj/Main.storyboard
+++ b/RewardWheel/Base.lproj/Main.storyboard
@@ -51,10 +51,10 @@
             </objects>
             <point key="canvasLocation" x="993" y="-737"/>
         </scene>
-        <!--View Controller-->
+        <!--33 Pleasures-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RewardWheel" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="33 Pleasures" id="BYZ-38-t0r" customClass="ViewController" customModule="RewardWheel" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -113,7 +113,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Kci-LY-5PR">
+                    <navigationItem key="navigationItem" title="33 Pleasures" id="Kci-LY-5PR">
                         <barButtonItem key="leftBarButtonItem" title="Statistics" id="7SA-DQ-tpy">
                             <connections>
                                 <segue destination="tWJ-l5-gsK" kind="show" id="Atg-gx-XFz"/>
