--- a/RewardWheel/Base.lproj/Main.storyboard
+++ b/RewardWheel/Base.lproj/Main.storyboard
@@ -271,7 +271,7 @@
                                 </connections>
                             </tableView>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OGa-K3-Ydq">
-                                <rect key="frame" x="122" y="106" width="51" height="31"/>
+                                <rect key="frame" x="123" y="106" width="51" height="31"/>
                                 <connections>
                                     <action selector="pricelessChanged:" destination="4Wl-q8-MCo" eventType="valueChanged" id="aEY-Ae-mbE"/>
                                 </connections>
@@ -283,7 +283,7 @@
                                 </connections>
                             </switch>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zX5-U8-PpG">
-                                <rect key="frame" x="122" y="145" width="51" height="31"/>
+                                <rect key="frame" x="123" y="145" width="51" height="31"/>
                                 <connections>
                                     <action selector="normalChanged:" destination="4Wl-q8-MCo" eventType="valueChanged" id="SGj-lX-V8I"/>
                                 </connections>
@@ -295,25 +295,25 @@
                                 </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Priceless" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mB4-Ej-7UM">
-                                <rect key="frame" x="16" y="111" width="69" height="21"/>
+                                <rect key="frame" x="16" y="111" width="97" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cheap" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xl3-5e-ym5">
-                                <rect key="frame" x="195" y="111" width="50" height="21"/>
+                                <rect key="frame" x="202.5" y="111" width="50" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Normal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z9k-ee-4Bg">
-                                <rect key="frame" x="16" y="150" width="56" height="21"/>
+                                <rect key="frame" x="16" y="150" width="97" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Expensive" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D1c-Ye-e0H">
-                                <rect key="frame" x="195" y="150" width="78" height="21"/>
+                                <rect key="frame" x="202.5" y="150" width="99.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -341,33 +341,36 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Z9k-ee-4Bg" firstAttribute="leading" secondItem="mB4-Ej-7UM" secondAttribute="leading" id="1wI-K1-v4N"/>
-                            <constraint firstItem="zX5-U8-PpG" firstAttribute="leading" secondItem="Z9k-ee-4Bg" secondAttribute="trailing" constant="50" id="1yG-zx-dAP"/>
-                            <constraint firstItem="nwi-bk-X6r" firstAttribute="leading" secondItem="D1c-Ye-e0H" secondAttribute="trailing" constant="39" id="3el-A5-gUd"/>
+                            <constraint firstItem="nwi-bk-X6r" firstAttribute="leading" secondItem="D1c-Ye-e0H" secondAttribute="trailing" constant="10" id="1HT-jI-baW"/>
+                            <constraint firstItem="zX5-U8-PpG" firstAttribute="leading" secondItem="Z9k-ee-4Bg" secondAttribute="trailing" constant="10" id="4fZ-aQ-WiO"/>
                             <constraint firstItem="nod-G8-vFt" firstAttribute="trailing" secondItem="Di4-Zr-Q3I" secondAttribute="trailing" id="4x4-jM-77y"/>
-                            <constraint firstItem="D1c-Ye-e0H" firstAttribute="centerY" secondItem="zX5-U8-PpG" secondAttribute="centerY" id="51l-WF-U6K"/>
-                            <constraint firstItem="OGa-K3-Ydq" firstAttribute="centerY" secondItem="mB4-Ej-7UM" secondAttribute="centerY" id="6hV-kb-xpq"/>
-                            <constraint firstItem="FoM-5M-f3P" firstAttribute="leading" secondItem="Z9k-ee-4Bg" secondAttribute="leading" id="9kM-rh-Ka1"/>
-                            <constraint firstItem="Z9k-ee-4Bg" firstAttribute="top" secondItem="mB4-Ej-7UM" secondAttribute="bottom" constant="18" id="DDY-HL-lv2"/>
-                            <constraint firstItem="nwi-bk-X6r" firstAttribute="centerY" secondItem="D1c-Ye-e0H" secondAttribute="centerY" id="IYo-Gp-Ohr"/>
-                            <constraint firstItem="mB4-Ej-7UM" firstAttribute="top" secondItem="Ra9-hU-5w4" secondAttribute="bottom" constant="13" id="KTY-Oa-Emz"/>
+                            <constraint firstItem="X9c-6G-lAr" firstAttribute="centerY" secondItem="mB4-Ej-7UM" secondAttribute="centerY" id="5wA-rG-35u"/>
+                            <constraint firstItem="dWK-2M-euF" firstAttribute="leading" secondItem="FoM-5M-f3P" secondAttribute="trailing" constant="10" id="83V-0Z-jn9"/>
+                            <constraint firstItem="dWK-2M-euF" firstAttribute="top" secondItem="nwi-bk-X6r" secondAttribute="bottom" constant="3" id="FW3-mI-qgZ"/>
+                            <constraint firstItem="Xl3-5e-ym5" firstAttribute="centerY" secondItem="X9c-6G-lAr" secondAttribute="centerY" id="GRe-QT-OsJ"/>
+                            <constraint firstItem="Z9k-ee-4Bg" firstAttribute="leading" secondItem="mB4-Ej-7UM" secondAttribute="leading" id="IN2-fV-lVV"/>
+                            <constraint firstItem="Xl3-5e-ym5" firstAttribute="centerX" secondItem="nod-G8-vFt" secondAttribute="centerX" constant="40" id="Itt-Ow-INh"/>
+                            <constraint firstItem="mB4-Ej-7UM" firstAttribute="leading" secondItem="nod-G8-vFt" secondAttribute="leading" constant="16" id="Kcn-G4-fHe"/>
+                            <constraint firstItem="dWK-2M-euF" firstAttribute="trailing" secondItem="nwi-bk-X6r" secondAttribute="trailing" id="KqB-ev-OUG"/>
+                            <constraint firstItem="FoM-5M-f3P" firstAttribute="top" secondItem="Z9k-ee-4Bg" secondAttribute="bottom" constant="8" id="M9E-cT-y2p"/>
                             <constraint firstItem="Di4-Zr-Q3I" firstAttribute="top" secondItem="nod-G8-vFt" secondAttribute="top" constant="153" id="O7M-TM-cdl"/>
-                            <constraint firstItem="D1c-Ye-e0H" firstAttribute="leading" secondItem="zX5-U8-PpG" secondAttribute="trailing" constant="24" id="OBp-P7-VGu"/>
+                            <constraint firstItem="zX5-U8-PpG" firstAttribute="trailing" secondItem="OGa-K3-Ydq" secondAttribute="trailing" id="P7j-Wk-m43"/>
                             <constraint firstItem="Ra9-hU-5w4" firstAttribute="centerX" secondItem="8do-OH-sh8" secondAttribute="centerX" id="PJw-Qf-erc"/>
-                            <constraint firstItem="mB4-Ej-7UM" firstAttribute="leading" secondItem="nod-G8-vFt" secondAttribute="leading" constant="16" id="UeU-NP-oG9"/>
+                            <constraint firstItem="OGa-K3-Ydq" firstAttribute="leading" secondItem="mB4-Ej-7UM" secondAttribute="trailing" constant="10" id="PvZ-Qs-Qa4"/>
+                            <constraint firstItem="OGa-K3-Ydq" firstAttribute="centerY" secondItem="mB4-Ej-7UM" secondAttribute="centerY" id="Qy1-nf-Gg2"/>
+                            <constraint firstItem="D1c-Ye-e0H" firstAttribute="centerY" secondItem="nwi-bk-X6r" secondAttribute="centerY" id="TY6-Y2-N49"/>
                             <constraint firstItem="Di4-Zr-Q3I" firstAttribute="leading" secondItem="nod-G8-vFt" secondAttribute="leading" id="YSl-74-12v"/>
-                            <constraint firstItem="dWK-2M-euF" firstAttribute="leading" secondItem="FoM-5M-f3P" secondAttribute="trailing" constant="10" id="Z61-D8-zwQ"/>
-                            <constraint firstItem="Xl3-5e-ym5" firstAttribute="centerY" secondItem="OGa-K3-Ydq" secondAttribute="centerY" id="Znr-o4-hLQ"/>
-                            <constraint firstItem="dWK-2M-euF" firstAttribute="trailing" secondItem="nwi-bk-X6r" secondAttribute="trailing" id="bLs-YR-jmw"/>
-                            <constraint firstItem="Xl3-5e-ym5" firstAttribute="leading" secondItem="OGa-K3-Ydq" secondAttribute="trailing" constant="24" id="bjh-Ld-RNZ"/>
                             <constraint firstItem="nod-G8-vFt" firstAttribute="bottom" secondItem="Di4-Zr-Q3I" secondAttribute="bottom" id="cli-Qk-xxd"/>
-                            <constraint firstItem="zX5-U8-PpG" firstAttribute="centerY" secondItem="Z9k-ee-4Bg" secondAttribute="centerY" id="eb3-nY-Acd"/>
-                            <constraint firstItem="OGa-K3-Ydq" firstAttribute="leading" secondItem="mB4-Ej-7UM" secondAttribute="trailing" constant="37" id="fQ7-d0-yGZ"/>
-                            <constraint firstItem="X9c-6G-lAr" firstAttribute="centerY" secondItem="Xl3-5e-ym5" secondAttribute="centerY" id="j0a-nM-HkQ"/>
+                            <constraint firstItem="zX5-U8-PpG" firstAttribute="centerY" secondItem="Z9k-ee-4Bg" secondAttribute="centerY" id="daj-7d-MRp"/>
+                            <constraint firstItem="FoM-5M-f3P" firstAttribute="leading" secondItem="Z9k-ee-4Bg" secondAttribute="leading" id="gt0-9Y-rJf"/>
+                            <constraint firstItem="mB4-Ej-7UM" firstAttribute="top" secondItem="Ra9-hU-5w4" secondAttribute="bottom" constant="13" id="lLr-h2-19O"/>
                             <constraint firstItem="Ra9-hU-5w4" firstAttribute="top" secondItem="nod-G8-vFt" secondAttribute="top" constant="13" id="nEm-wr-eXj"/>
-                            <constraint firstItem="FoM-5M-f3P" firstAttribute="top" secondItem="Z9k-ee-4Bg" secondAttribute="bottom" constant="8" id="pe2-DE-vaK"/>
-                            <constraint firstItem="X9c-6G-lAr" firstAttribute="leading" secondItem="Xl3-5e-ym5" secondAttribute="trailing" constant="67" id="sst-tS-UEZ"/>
-                            <constraint firstItem="dWK-2M-euF" firstAttribute="top" secondItem="nwi-bk-X6r" secondAttribute="bottom" constant="3" id="zGO-xN-7ms"/>
+                            <constraint firstItem="nod-G8-vFt" firstAttribute="trailing" secondItem="X9c-6G-lAr" secondAttribute="trailing" constant="14" id="qa8-Ue-kZ0"/>
+                            <constraint firstItem="nwi-bk-X6r" firstAttribute="top" secondItem="X9c-6G-lAr" secondAttribute="bottom" constant="8" id="uNL-3u-FdV"/>
+                            <constraint firstItem="D1c-Ye-e0H" firstAttribute="leading" secondItem="Xl3-5e-ym5" secondAttribute="leading" id="wT4-I0-T31"/>
+                            <constraint firstItem="nwi-bk-X6r" firstAttribute="trailing" secondItem="X9c-6G-lAr" secondAttribute="trailing" id="wgD-zK-ByN"/>
+                            <constraint firstItem="OGa-K3-Ydq" firstAttribute="centerX" secondItem="nod-G8-vFt" secondAttribute="centerX" constant="-40" id="x6g-x7-hYp"/>
+                            <constraint firstItem="Z9k-ee-4Bg" firstAttribute="top" secondItem="mB4-Ej-7UM" secondAttribute="bottom" constant="18" id="zA7-xD-1ZL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="nod-G8-vFt"/>
                     </view>
